# eenv

./: .env  .env.development.enc  .env.development.example  .env.enc  .env.example  .env.production.enc  .env.production.example  .gitignore  Cargo.toml  README.md  backup  eenv.config.json  eenv.enc.json  main.rs  package.json  pnpm-lock.yaml
.githooks/: note  pre-commit  pre-commit.ps1
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml  regression.yml
backups/: main.rs
rs/: .eenvignore  .env.development  .env.example  .env.production  Cargo.toml  eenv.config.json  todo.txt
rs/src/: main.rs
source/: cli.js
source/screens/: apply.js  default.js  init.js  update.js
src/: about.rs  cli.rs  config.rs  crypto.rs  envscan.rs  examples.rs  gitignore.rs  hooks.rs  init.rs  lib.rs  main.rs  precommit.rs  types.rs  util.rs
src/hooks/: pre-commit.ps1  pre-commit.sh
